syntax = "proto3";

option java_multiple_files = true;
package common;

message LongListProto {

  int64 id = 1;
}
