syntax = "proto3";

option java_multiple_files = true;
package common;

message ResponseStatusProto {
  string code = 1;
  string description = 2;
}
