syntax = "proto3";

option java_multiple_files = true;
package common;

message StringListProto {
  repeated string elements = 1;
}
