syntax = "proto3";

option java_multiple_files = true;
package common;

message StringLongMapProto {
  map<string, int64> elements = 1;
}
