syntax = "proto3";

option java_multiple_files = true;
package common;

message StringStringMapProto {
  map<string, string> elements = 1;
}
