syntax = "proto3";

option java_multiple_files = true;

package player;

message PlayerRequestProto {
  int64 id = 1;
  string name = 2;
  string status = 3;
}
