syntax = "proto3";

option java_multiple_files = true;
package player.event;

message PlayerNotificationEventProto {
  string txKey = 1;
  string logTrackKey = 2;
  int64 id = 3;
  string name = 4;
  string status = 5;
}
